update github data

--- a/src/shared/opensource/projects.json
+++ b/src/shared/opensource/projects.json
@@ -1,1 +1,90 @@
-{"data":[{"id":"R_kgDOGsj20w","name":"OpenGL-RayCaster","createdAt":"2022-01-18T17:17:03Z","url":"https://github.com/OmarAhmed-A/OpenGL-RayCaster","description":"raycaster made with C and OpenGL","isFork":false,"languages":[]},{"id":"R_kgDOHAAfVw","name":"infixToPostfixCalculator","createdAt":"2022-03-14T14:30:22Z","url":"https://github.com/OmarAhmed-A/infixToPostfixCalculator","description":"CC215-Data Structures 7th project","isFork":false,"languages":[]},{"id":"R_kgDOHcavaQ","name":"PortfolioWebsite","createdAt":"2022-06-03T15:25:45Z","url":"https://github.com/OmarAhmed-A/PortfolioWebsite","description":null,"isFork":false,"languages":[{"name":"Dockerfile","iconifyClass":"simple-icons:docker"},{"name":"JavaScript","iconifyClass":"logos-javascript"},{"name":"HTML","iconifyClass":"logos-html-5"},{"name":"CSS","iconifyClass":"logos-css-3"}]},{"id":"R_kgDOHX9iuw","name":"Flutter-mothers-day","createdAt":"2022-05-21T20:25:19Z","url":"https://github.com/OmarAhmed-A/Flutter-mothers-day","description":null,"isFork":false,"languages":[{"name":"HTML","iconifyClass":"logos-html-5"}]}]}
+{
+    "data": [
+        {
+            "id": "R_kgDOGsj20w",
+            "name": "OpenGL-RayCaster",
+            "createdAt": "2022-01-18T17:17:03Z",
+            "url": "https://github.com/OmarAhmed-A/OpenGL-RayCaster",
+            "description": "raycaster made with C and OpenGL",
+            "isFork": false,
+            "languages": [
+                {
+                    "name": "C",
+                    "iconifyClass": "logos-c"
+                }
+            ]
+        },
+        {
+            "id": "R_kgDOHpxLJg",
+            "name": "Decision-Trees-Titanic-Survival-Exploration",
+            "createdAt": "2022-07-13T14:43:44Z",
+            "url": "https://github.com/OmarAhmed-A/Decision-Trees-Titanic-Survival-Exploration",
+            "description": "Desision trees Lab using Scikit-learn and Pandas",
+            "isFork": false,
+            "languages": [
+                {
+                    "name": "Jupyter Notebook",
+                    "iconifyClass": "logos-jupyter"
+                }
+            ]
+        },
+        {
+            "id": "R_kgDOHcavaQ",
+            "name": "PortfolioWebsite",
+            "createdAt": "2022-06-03T15:25:45Z",
+            "url": "https://github.com/OmarAhmed-A/PortfolioWebsite",
+            "description": null,
+            "isFork": false,
+            "languages": [
+                {
+                    "name": "Dockerfile",
+                    "iconifyClass": "simple-icons:docker"
+                },
+                {
+                    "name": "JavaScript",
+                    "iconifyClass": "logos-javascript"
+                },
+                {
+                    "name": "HTML",
+                    "iconifyClass": "logos-html-5"
+                },
+                {
+                    "name": "CSS",
+                    "iconifyClass": "logos-css-3"
+                }
+            ]
+        },
+        {
+            "id": "R_kgDOHX9iuw",
+            "name": "Flutter-mothers-day",
+            "createdAt": "2022-05-21T20:25:19Z",
+            "url": "https://github.com/OmarAhmed-A/Flutter-mothers-day",
+            "description": null,
+            "isFork": false,
+            "languages": [
+                {
+                    "name": "Flutter",
+                    "iconifyClass": "logos-flutter"
+                },
+                {
+                    "name": "Dart",
+                    "iconifyClass": "logos-dart"
+                }
+            ]
+        },
+        {
+            "id": "R_kgDOHAAfVw",
+            "name": "infixToPostfixCalculator",
+            "createdAt": "2022-03-14T14:30:22Z",
+            "url": "https://github.com/OmarAhmed-A/infixToPostfixCalculator",
+            "description": "CC215-Data Structures 7th project",
+            "isFork": false,
+            "languages": [
+                {
+                    "name": "C",
+                    "iconifyClass": "logos-c"
+                }
+            ]
+        }
+    ]
+}
