--- a/package.json
+++ b/package.json
@@ -12,38 +12,38 @@
     "test": "react-scripts test"
   },
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.3",
-    "apollo-boost": "^0.4.4",
-    "baseui": "^9.65.3",
-    "bootstrap": "^4.4.1",
+    "@apollo/react-hooks": "^4.0.0",
+    "apollo-boost": "^0.4.9",
+    "baseui": "^12.2.0",
+    "bootstrap": "^5.2.2",
     "chart.js": "^2.9.3",
-    "dotenv": "^10.0.0",
+    "dotenv": "^16.0.3",
     "fs": "0.0.1-security",
-    "gh-pages": "^2.1.1",
-    "graphql": "^14.5.8",
-    "node-fetch": "^2.6.0",
+    "gh-pages": "^4.0.0",
+    "graphql": "^16.6.0",
+    "node-fetch": "^3.2.10",
     "node-sass": "^7.0.3",
-    "prettier-package-json": "^2.1.3",
-    "radium": "^0.26.0",
-    "react": "^16.10.2",
-    "react-bootstrap": "^1.0.0-beta.16",
+    "prettier-package-json": "^2.7.0",
+    "radium": "^0.26.2",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-chartjs-2": "^2.9.0",
-    "react-dom": "^16.10.2",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^5.0.1",
-    "react-spring": "^8.0.27",
-    "styled-components": "^5.1.1",
-    "styletron-engine-atomic": "^1.4.6",
-    "styletron-react": "^5.2.7"
+    "react-spring": "^9.5.5",
+    "styled-components": "^5.3.6",
+    "styletron-engine-atomic": "^1.5.0",
+    "styletron-react": "^6.1.0"
   },
   "devDependencies": {
-    "@iconify/icons-logos": "^1.0.9",
-    "@iconify/react": "^1.1.1",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.2.11",
-    "prettier": "2.0.5"
+    "@iconify/icons-logos": "^1.2.18",
+    "@iconify/react": "^4.0.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "prettier": "2.7.1"
   },
   "browserslist": {
     "production": [
