--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "omar-portfolio",
-  "homepage": "https://codebyomar.ml",
+  "homepage": "https://codebyomar.tk",
   "version": "0.1.0",
   "scripts": {
     "build": "react-scripts build",
@@ -12,36 +12,38 @@
     "test": "react-scripts test"
   },
   "dependencies": {
-    "@apollo/react-hooks": "^4.0.0",
-    "apollo-boost": "^0.4.9",
-    "baseui": "^12.2.0",
-    "bootstrap": "^5.2.2",
+    "@apollo/react-hooks": "^3.1.3",
+    "apollo-boost": "^0.4.4",
+    "baseui": "^9.65.3",
+    "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
-    "dotenv": "^16.0.3",
     "fs": "0.0.1-security",
-    "gh-pages": "^4.0.0",
-    "graphql": "^16.6.0",
-    "node-fetch": "^3.2.10",
-    "node-sass": "^7.0.3",
-    "prettier-package-json": "^2.7.0",
-    "radium": "^0.26.2",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.5.0",
+    "gh-pages": "^2.1.1",
+    "graphql": "^14.5.8",
+    "node-fetch": "^2.6.0",
+    "prettier-package-json": "^2.1.3",
+    "radium": "^0.26.0",
+    "react": "^16.10.2",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-chartjs-2": "^2.9.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^16.10.2",
     "react-helmet": "^6.1.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^5.0.1",
-    "react-spring": "^9.5.5",
-    "styled-components": "^5.3.6",
-    "styletron-engine-atomic": "^1.5.0",
-    "styletron-react": "^6.1.0"
+    "react-spring": "^8.0.27",
+    "styled-components": "^5.1.1",
+    "styletron-engine-atomic": "^1.4.6",
+    "styletron-react": "^5.2.7"
   },
   "devDependencies": {
     "@iconify/icons-logos": "^1.2.18",
     "@iconify/react": "^4.0.0",
-    "prettier": "2.7.1"
+    "dotenv": "^10.0.0",
+    "fs-extra": "^10.0.0",
+    "gh-pages": "^3.2.3",
+    "prettier": "2.7.1",
+    "prettier-package-json": "^2.7.0"
   },
   "browserslist": {
     "production": [
