--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "omar-portfolio",
-  "homepage": "https://codebyomar.tk",
+  "homepage": "https://omarahmed-a.github.io/PortfolioWebsite/",
   "version": "0.1.0",
   "scripts": {
     "build": "react-scripts build",
