--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "styletron-react": "^5.2.7"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.14.5",
     "@iconify/icons-logos": "^1.2.18",
     "@iconify/react": "^4.0.0",
     "dotenv": "^10.0.0",
