--- a/src/shared/opensource/projects.json
+++ b/src/shared/opensource/projects.json
@@ -1,122 +1,1 @@
-{
-    "data": [
-        {
-            "id": "R_kgDOJH-A4g",
-            "name": "DigitalSquad",
-            "createdAt": "2023-03-10T18:02:00Z",
-            "url": "https://github.com/OmarAhmed-A/DigitalSquad",
-            "description": "Our solution for DELL hacktrick Hackathon 2023 which was really incredible challenge.",
-            "isFork": false,
-            "languages": [
-                {
-                    "name": "Python",
-                    "iconifyClass": "logos-python"
-                },
-                {
-                    "name": "HTML",
-                    "iconifyClass": "logos-html-5"
-                },
-                {
-                    "name": "JavaScript",
-                    "iconifyClass": "logos-javascript"
-                },
-                {
-                    "name": "CSS",
-                    "iconifyClass": "logos-css-3"
-                },
-                {
-                    "name": "Jupyter Notebook",
-                    "iconifyClass": "logos-jupyter"
-                }
-            ]
-        },
-        {
-            "id": "R_kgDOGsj20w",
-            "name": "Run_from_Aast_OpenGLRayCaster",
-            "createdAt": "2022-01-18T17:17:03Z",
-            "url": "https://github.com/OmarAhmed-A/Run_from_Aast_OpenGLRayCaster",
-            "description": "raycaster made with C and OpenGL",
-            "isFork": false,
-            "languages": []
-        },
-        {
-            "id": "R_kgDOHoGi1w",
-            "name": "Final-Project-finding-donors",
-            "createdAt": "2022-07-08T07:58:20Z",
-            "url": "https://github.com/OmarAhmed-A/Final-Project-finding-donors",
-            "description": null,
-            "isFork": false,
-            "languages": [
-                {
-                    "name": "Jupyter Notebook",
-                    "iconifyClass": "logos-jupyter"
-                },
-                {
-                    "name": "Python",
-                    "iconifyClass": "logos-python"
-                },
-                {
-                    "name": "HTML",
-                    "iconifyClass": "logos-html-5"
-                }
-            ]
-        },
-        {
-            "id": "R_kgDOKpY_gg",
-            "name": "NeumericalMethods",
-            "createdAt": "2023-11-05T02:02:11Z",
-            "url": "https://github.com/OmarAhmed-A/NeumericalMethods",
-            "description": "Numerical Methods Calculator Web App",
-            "isFork": false,
-            "languages": [
-                {
-                    "name": "JavaScript",
-                    "iconifyClass": "logos-javascript"
-                },
-                {
-                    "name": "HTML",
-                    "iconifyClass": "logos-html-5"
-                },
-                {
-                    "name": "CSS",
-                    "iconifyClass": "logos-css-3"
-                }
-            ]
-        },
-        {
-            "id": "R_kgDOHcavaQ",
-            "name": "PortfolioWebsite",
-            "createdAt": "2022-06-03T15:25:45Z",
-            "url": "https://github.com/OmarAhmed-A/PortfolioWebsite",
-            "description": null,
-            "isFork": false,
-            "languages": [
-                {
-                    "name": "Dockerfile",
-                    "iconifyClass": "simple-icons:docker"
-                },
-                {
-                    "name": "JavaScript",
-                    "iconifyClass": "logos-javascript"
-                },
-                {
-                    "name": "HTML",
-                    "iconifyClass": "logos-html-5"
-                },
-                {
-                    "name": "CSS",
-                    "iconifyClass": "logos-css-3"
-                }
-            ]
-        },
-        {
-            "id": "R_kgDOHAAfVw",
-            "name": "infixToPostfixCalculator",
-            "createdAt": "2022-03-14T14:30:22Z",
-            "url": "https://github.com/OmarAhmed-A/infixToPostfixCalculator",
-            "description": "CC215-Data Structures 7th project",
-            "isFork": false,
-            "languages": []
-        }
-    ]
-}
+{"data":[{"id":"R_kgDOJH-A4g","name":"DigitalSquad","createdAt":"2023-03-10T18:02:00Z","url":"https://github.com/OmarAhmed-A/DigitalSquad","description":"Our solution for DELL hacktrick Hackathon 2023 which was really incredible challenge.","isFork":false,"languages":[{"name":"Python","iconifyClass":"logos-python"},{"name":"HTML","iconifyClass":"logos-html-5"},{"name":"JavaScript","iconifyClass":"logos-javascript"},{"name":"CSS","iconifyClass":"logos-css-3"},{"name":"Jupyter Notebook","iconifyClass":"logos-jupyter"}]},{"id":"R_kgDOJqwPPw","name":"Hyper-Market-Manegment-Semester6","createdAt":"2023-06-02T21:52:07Z","url":"https://github.com/OmarAhmed-A/Hyper-Market-Manegment-Semester6","description":"Manage your market with ease using our Hyper Market Management System! This Java-based system has modules for admins, marketers, inventory managers, sellers, and users. It's still under development, but it's already functional and can be used to manage a large market.","isFork":false,"languages":[{"name":"Java","iconifyClass":"logos-java"}]},{"id":"R_kgDOGsj20w","name":"Run_from_Aast_OpenGLRayCaster","createdAt":"2022-01-18T17:17:03Z","url":"https://github.com/OmarAhmed-A/Run_from_Aast_OpenGLRayCaster","description":"raycaster made with C and OpenGL","isFork":false,"languages":[]},{"id":"R_kgDOKpY_gg","name":"NeumericalMethods","createdAt":"2023-11-05T02:02:11Z","url":"https://github.com/OmarAhmed-A/NeumericalMethods","description":"Numerical Methods Calculator Web App","isFork":false,"languages":[{"name":"JavaScript","iconifyClass":"logos-javascript"},{"name":"HTML","iconifyClass":"logos-html-5"},{"name":"CSS","iconifyClass":"logos-css-3"}]},{"id":"R_kgDOH_g1Lw","name":"MakeLineageOSSecure","createdAt":"2022-09-14T00:50:48Z","url":"https://github.com/OmarAhmed-A/MakeLineageOSSecure","description":"Allows you to bypass SafetyNet on lineageos without Magisk","isFork":false,"languages":[{"name":"Python","iconifyClass":"logos-python"}]},{"id":"R_kgDOJrqZSA","name":"MIPS2","createdAt":"2023-06-05T15:22:47Z","url":"https://github.com/OmarAhmed-A/MIPS2","description":"Pipelined MIPS Processor in VHDL Computer Architecture CC317 AAST.","isFork":false,"languages":[]}]}
